--- a/templates/mainsite/quiz_2.html
+++ b/templates/mainsite/quiz_2.html
@@ -14,7 +14,6 @@
       padding: 20px;
       padding-left: 0px;
       padding-right: 0px;
-      border-radius: 8px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     
@@ -91,14 +90,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <a class="navbar-brand" href="#">
-      <img src="{% static 'portu_flag_pic.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      <span class="text-green">Portu</span><span class="text-red">Pro</span>
+      <img src="{% static 'Logo1.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+      <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto" id="navbarUL">
         <li class="nav-item">
           <a class="nav-link" href="men_tester.html">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -140,19 +139,19 @@
   <div class="container">
     <div class="quiz-container">
       <div class="d-flex justify-content-between align-items-center mb-3">
-        <a href="#" class="btn btn-light big-arrow" style="border: solid 1px #000000; margin-left: 10px;">&larr;</a>
-        <div style="width: 150px">
+        <!-- <a href="#" class="btn btn-light big-arrow" style="border: solid 1px #000000; margin-left: 10px;">&larr;</a> -->
+        <div class='unit_heading'>
           <b>Unit {{unit_id}} - {{unit_name}} </b>
         </div>
-        <div class="progress" style="width: 30%;"> 
-          <div class="progress-bar" style="width:70%"></div>
+        <div class="progress" style="width: 30%; border: 2px solid black;"> 
+          <div class="progress-bar progress-bar-striped" style="width:70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
         </div>
         {% if not repeated_question %}
         <b>{{question_id}} of 11</b>
       {% else %}
         <b>Repeated Question</b>
       {% endif %} 
-        <a href="/home" class="btn btn-light big-close" style="border: solid 1px #000000; margin-right: 10px;">&times;</a>
+        <a href="/home" class="btn btn-light big-close" id="big_close"><b>&times;</b></a>
       </div>
       <hr> 
       <section class="phrase-section">
@@ -161,7 +160,7 @@
           <input type="hidden" name="form_type" value="{{question_id}}">
         <h1 class="text-center mb-4">Say the Following Phrase</h1>
         <div class="phrase">
-            <span><b title="I am a boy">Eu Sou Um Menino</b> <button class="sound-button" id="speakBtn" onclick="convertTextToSpeech('Eu sou um menino')">🔊</button></span>
+            <span><b>{{question_text}}</b> <button class="sound-button" id="speakBtn" onclick="convertTextToSpeech('{{question_text}}')">🔊</button></span>
         </div>
         <div class="recording">
             <button class="btn btn-primary" id="recordBtn">Click To Speak</button>
