--- a/templates/mainsite/quiz_4.html
+++ b/templates/mainsite/quiz_4.html
@@ -8,7 +8,7 @@
 <link rel="icon" type="image/jpg" href="{% static 'pp.jpg' %}">
 <style>
     .quiz-container {
-      max-width: 650px;
+      max-width: 700px;
       margin: 30px auto;
       background-color: #f9f9f9;
       padding-top: 20px;
@@ -18,15 +18,12 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     
-    .progress {
-      height: 20px;
-    }
     .progress-bar {
       background-color: #4CAF50;
     }
     hr {
-        border: none;
-        height: 1px;
+        
+        height: 12px;
         width: 100%;
         margin-left: 0px;  /* counteract the left padding of the container */
         margin-right: 0px; /* counteract the right padding of the container */
@@ -136,14 +133,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <a class="navbar-brand" href="#">
-      <img src="{% static 'portu_flag_pic.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      <span class="text-green">Portu</span><span class="text-red">Pro</span>
+      <img src="{% static 'Logo1.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+      <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto" id="navbarUL">
         <li class="nav-item">
           <a class="nav-link" href="men_tester.html">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -185,31 +182,31 @@
   <div class="container">
     <div class="quiz-container">
       <div class="d-flex justify-content-between align-items-center mb-3">
-        <a href="#" class="btn btn-light big-arrow" style="border: solid 1px #000000; margin-left: 10px;">&larr;</a>
-        <div style="width: 150px">
+        <!-- <a href="#" class="btn btn-light big-arrow" style="border: solid 1px #000000; margin-left: 10px;">&larr;</a> -->
+        <div class="unit_heading">
           <b>Unit 4 - General Outdoors and Weather </b>
         </div>
-        <div class="progress" style="width: 30%;"> 
-          <div class="progress-bar" style="width:70%"></div>
+        <div class="progress"> 
+          <div class="progress-bar progress-bar-striped" style="width:70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
         </div>
         {% if not repeated_question %}
         <b>{{question_id}} of 11</b>
       {% else %}
         <b>Repeated Question</b>
       {% endif %}  
-        <a href="/home" class="btn btn-light big-close" style="border: solid 1px #000000; margin-right: 10px;">&times;</a>
+        <a href="/home" class="btn btn-light big-close" id="big_close">&times;</a>
       </div>
       <hr> 
       <div class="mcq-container">
-        <h2 class="text-center mb-4">{{question_text}}</h2>
+        <h1 class="text-center mb-4">{{question_text}}</h1>
         <form id="quiz-form" method="post" action="submit_answer">
         {% csrf_token %}
         <input type="hidden" name="form_type" value="{{question_id}}">
         <ul class="options">
             {% for option in options %}
             <li>
-                <input type="radio" id="option{{forloop.counter}}" name="quiz" value="{{option}}">
-                <label for="option{{forloop.counter}}">{{option}}</label>
+                <input type="radio"  id="option{{forloop.counter}}" name="quiz" value="{{option}}">
+                <label class="mcq_option" for="option{{forloop.counter}}"><b>{{option}}</b></label>
             </li>
             {% endfor %}
 
