--- a/templates/mainsite/quiz_5.html
+++ b/templates/mainsite/quiz_5.html
@@ -12,7 +12,21 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <style>
         #sortable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
-        #sortable li { margin: 3px 3px 3px 0; padding: 8px; float: left;  font-size: 1.5em; text-align: center;}
+        #sortable li { 
+          margin: 3px 3px 3px 0; 
+          padding: 8px; 
+          float: left;  
+          font-size: 1.5em; 
+          text-align: center;
+          border: 1px solid black;
+          /* box-shadow: #000000 2px 2px; */
+          box-shadow: inset 0px 0px 3px 0px black;
+        }
+
+        #sortable li:hover {
+
+          background-color: rgb(201, 198, 198);
+        }
     
 
     .quiz-container {
@@ -26,9 +40,6 @@
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     
-    .progress {
-      height: 20px;
-    }
     .progress-bar {
       background-color: #4CAF50;
     }
@@ -173,14 +184,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <a class="navbar-brand" href="#">
-      <img src="{% static 'portu_flag_pic.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      <span class="text-green">Portu</span><span class="text-red">Pro</span>
+      <img src="{% static 'Logo1.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+      <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto" id="navbarUL">
         <li class="nav-item">
           <a class="nav-link" href="men_tester.html">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -222,25 +233,25 @@
   <div class="container">
     <div class="quiz-container">
       <div class="d-flex justify-content-between align-items-center mb-3">
-        <a href="#" class="btn btn-light big-arrow" style="border: solid 1px #000000; margin-left: 10px;">&larr;</a>
-        <div style="width: 150px">
+        <div class="unit_heading">
           <b>Unit 4 - General Outdoors and Weather </b>
         </div>
         <div class="progress" style="width: 30%;"> 
-          <div class="progress-bar" style="width:70%"></div>
+          <div class="progress-bar progress-bar-striped" style="width:70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+
         </div>
         {% if not repeated_question %}
         <b>{{question_id}} of 11</b>
       {% else %}
         <b>Repeated Question</b>
       {% endif %}  
-        <a href="/home" class="btn btn-light big-close" style="border: solid 1px #000000; margin-right: 10px;">&times;</a>
+        <a href="/home" class="btn btn-light big-close" id="big_close" style="border: solid 1px #000000; margin-right: 10px;">&times;</a>
       </div>
       <hr> 
       <div class="mcq-container">
         <form>
         {% csrf_token %}
-        <center><h2>Arrange the words to form a sentence</h2></center>
+        <h1 class="text-center mb-4">Arrange in Sequence</h1>
         <ul id="sortable" class="horizontal-list" style="margin-left:20px; margin-top: 50px;">
           {% for word in jumbled_answer %}
             <li class="ui-state-default">{{word}}</li>
