--- a/templates/mainsite/quiz_6.html
+++ b/templates/mainsite/quiz_6.html
@@ -164,14 +164,14 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <a class="navbar-brand" href="#">
-      <img src="{% static 'portu_flag_pic.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      <span class="text-green">Portu</span><span class="text-red">Pro</span>
+      <img src="{% static 'Logo1.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+      <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto" id="navbarUL">
         <li class="nav-item">
           <a class="nav-link" href="men_tester.html">Home <span class="sr-only">(current)</span></a>
         </li>
@@ -213,25 +213,26 @@
   <div class="container">
     <div class="quiz-container">
       <div class="d-flex justify-content-between align-items-center mb-3">
-        <a href="#" class="btn btn-light big-arrow" style="border: solid 1px #000000; margin-left: 10px;">&larr;</a>
-        <div style="width: 150px">
-          <b>Unit 4 - General Outdoors and Weather </b>
+        <!-- <a href="#" class="btn btn-light big-arrow" style="border: solid 1px #000000; margin-left: 10px;">&larr;</a> -->
+        <div class="unit_heading">
+          <b>Unit {{unit_id}} - {{unit_name}}</b>
         </div>
-        <div class="progress" style="width: 30%;"> 
-          <div class="progress-bar" style="width:70%"></div>
+        <div class="progress" style="width: 30%; border: 2px solid black;"> 
+          <div class="progress-bar progress-bar-striped" style="width:70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
         </div>
         {% if not repeated_question %}
         <b>{{question_id}} of 11</b>
       {% else %}
         <b>Repeated Question</b>
       {% endif %}  
-        <a href="/home" class="btn btn-light big-close" style="border: solid 1px #000000; margin-right: 10px;">&times;</a>
+        <a href="/home" class="btn btn-light big-close" id="big_close">&times;</a>
       </div>
       <hr> 
       <div class="mcq-container">
         <form>
             {% csrf_token %}
-            <center><b><h2 style="margin-bottom: 40px;">Translate into Portuguese</h2></b></center>
+            <!-- <center><b><h2 style="margin-bottom: 40px;">Translate into Portuguese</h2></b></center> -->
+            <h1 class="text-center mb-4">Translate the Following Phrase</h1>
             <p class="lead">{{question_text }}</p>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
@@ -274,19 +275,19 @@ $(document).ready(function() {
             success: function(response) {
                 if ($("#inputIcon").length === 0) {
                 var iconSpan = $('<span class="input-group-text" id="inputIcon"></span>');
-                var appendGroup = $('<div class="input-group-append"></div>').append(iconSpan);
+                var appendGroup = $('<div class="input-group-append" id="answer-addon"></div>').append(iconSpan);
                 $('.input-group').append(appendGroup);
             }
 
             if(response.is_correct) {
                 $('#correctSound')[0].play();
-                $('#inputIcon').html('<i class="fas fa-check" style="color: green;"></i>');
+                $('#inputIcon').html('<i class="fas fa-check" style="color: green; font-size: 20px;"></i>');
                 $('#translationInput').css({
                     'border': '3px solid #28a745' // green
                 });
             } else {
                 $('#wrongSound')[0].play();
-                $('#inputIcon').html('<i class="fas fa-times" style="color: red;"></i>');
+                $('#inputIcon').html('<i class="fas fa-times" style="color: red; font-size: 20px;"></i>');
                 $('#translationInput').css({
                     'border': '3px solid #dc3545' // red
                 });
