--- a/templates/mainsite/test_dashboard.html
+++ b/templates/mainsite/test_dashboard.html
@@ -7,26 +7,32 @@
 <title>PortuguesePro Learning Dashboard</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="{% static 'dashboard.css' %}">
+<style></style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <a class="navbar-brand" href="#">
-      <img src="{% static 'portu_flag_pic.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      <span class="text-green">Portu</span><span class="text-red">Pro</span>
+      
+      <img src="{% static 'Logo2.png' %}" alt="Logo" width="90" height="65" class="d-inline-block align-text-top">
+      <h1><span class="text-green" style="margin-left: 10px;">Portu</span><span class="text-red">Pro</span></h1>
+      
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto" id="navbarUL">
         <li class="nav-item active">
-          <a class="nav-link active-tab" href="men_tester.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link active-tab nb-item" href="men_tester.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/vocab">Vocabulary</a>
+          <a class="nav-link nb-item" style="color: rgb(232, 255, 255);" href="/vocab">Vocabulary</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link nb-item" style="color: rgb(232, 255, 255);" href="/analytics">Analytics</a>
+    </li>
       <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="cultureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle nb-item" style="color: rgb(232, 255, 255);"  href="#" id="cultureDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Culture
           </a>
           <div class="dropdown-menu" aria-labelledby="cultureDropdown">
@@ -37,7 +43,7 @@
           </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="moreDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle nb-item"  style="color: rgb(232, 255, 255);" href="#" id="moreDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           More
         </a>
         <div class="dropdown-menu" aria-labelledby="cultureDropdown">
@@ -47,12 +53,12 @@
           <!-- More dropdown items -->
         </div>
       <li class="nav-item">
-        <a class="nav-link" href="gearth.html">Settings</a>
+        <a class="nav-link" style="color: rgb(232, 255, 255);" href="/settings">Settings</a>
     </li>
         <!-- More nav items -->
       </ul>
       <span class="navbar-text">
-        <a href="/signout" class="settings-link">Logout</a>
+        <a href="/signout" class="settings-link nb-item">Logout</a>
       </span>
     </div>
   </nav>
@@ -60,7 +66,7 @@
 <div class="container mt-4">
   <div class="text-white">
     {% if user.is_authenticated %}
-    <h1>{{greeting}} {{uname}}!</h1><br><br>
+    <h1>{{greeting}} {{user.username}}</h1><br>
     {% endif %}
   </div>
   
@@ -71,7 +77,7 @@
         {% for unit in units %}
         <div class="col-md-6 mb-3">
             <div class="card lesson-card">
-              <img src="{{unit.description}}" class="img-responsive-img-top" alt="..." style="height:200px">
+              <img src="{{unit.description}}" class="img-responsive-img-top unit-img" alt="..." style="height:200px">
                 <div class="card-body">
                     <h5 class="card-title">{{unit.id}} - {{unit.name}}</h5>
                     <!-- <p class="card-text">Review your lessons and track your progress.</p> -->
@@ -190,7 +196,7 @@
                 </ul>
             </div>
             <div class="modal-footer">
-                <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 <!-- You can add additional buttons if needed -->
             </div>
             </div>
@@ -201,7 +207,7 @@
       </div>
     </div>
     
-    <div class="col-md-4">
+    <div class="col-md-4 ">
       <h2 style="color: white">Weather Widget</h2>
       <div class="card mb-3 weather-widget">
         <div class="card-body">
@@ -209,15 +215,20 @@
             <h3 class="card-title city-title">{{city}}</h3>
             <div style="align-items: end; width:60px; float: right;">
               <img src="{{image}}" alt="Weather Icon" style="max-width: 100px;">
+              <h6 id="localTemp" class="card-text">{{temp_c}}</h6>
             </div>
             <h5 id="localTime" class="card-text">{{local_time}}</h5>
             <h5 id="liveTime">Random</h5>
             <h6 id="localTemp" class="card-text">{{temp_c}}</h6>
         </div>
       </div>
+    
       <!-- Add other widgets like activity tracker and twitter feed -->
-      <div id="calendar-container">
-        <h2 style="color: white">Activity Tracker</h2>
+      
+      <h2 style="color: white">Activity Tracker</h2>
+      <div class="card mb-3 calendar-widget">
+      <!-- <div id="calendar-container"> -->
+        
         <table id="loginCalendar" class="calendar">
           <thead>
             <tr>
@@ -242,10 +253,11 @@
                 <!-- Calendar days will be generated by JavaScript -->
             </tbody>
         </table>
+      <!-- </div> -->
     </div>
-      <div class="twitter-container">
+      <!-- <div class="twitter-container">
         <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/theportugalnews?ref_src=twsrc%5Etfw">Tweets by theportugalnews</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
